--- a/playbook/roles/wordpress/templates/create_wp_db.j2
+++ b/playbook/roles/wordpress/templates/create_wp_db.j2
@@ -1,4 +1,4 @@
-CREATE DATABASE wordpress;
+CREATE DATABASE IF NOT EXISTS wordpress;
 GRANT SELECT,INSERT,UPDATE,DELETE,CREATE,DROP,ALTER ON wordpress.*
 TO wordpress@localhost
 IDENTIFIED BY 'yourPassword';
