--- a/playbook/roles/wordpress/templates/wp.conf.j2
+++ b/playbook/roles/wordpress/templates/wp.conf.j2
@@ -1,7 +1,7 @@
 <?php
-define('DB_NAME', 'wordpress');
-define('DB_USER', 'wordpress');
-define('DB_PASSWORD', '{{new_user_password}}');
+define('DB_NAME', '{{wp_database}}');
+define('DB_USER', '{{wp_database_username}}');
+define('DB_PASSWORD', '{{wp_database_password}}');
 define('DB_HOST', 'localhost');
 define('WP_CONTENT_DIR', '/usr/share/wordpress/wp-content');
 ?>
